--- a/src/components/sections/FAQ/faqStyles.css
+++ b/src/components/sections/FAQ/faqStyles.css
@@ -4,7 +4,7 @@
 	justify-content: center;
 	align-items: center;
 	width: 100%;
-	padding: 0 100px 0 100px;
+	padding: 80px 100px 0 100px;
 
 	.faq__title {
 		font-size: 32px;
@@ -88,13 +88,13 @@
 
 @media (max-width: 1024px) {
 	.faq {
-		padding: 0 50px 0 50px;
+		padding: 80px 50px 0 50px;
 	}
 }
 
 @media (max-width: 768px) {
 	.faq {
-		padding: 0 20px 0 20px;
+		padding: 70px 20px 0 20px;
 
 		.faq__title {
 			font-size: 24px;
@@ -123,7 +123,7 @@
 
 @media (max-width: 480px) {
 	.faq {
-		padding: 0 15px 0 15px;
+		padding: 70px 15px 0 15px;
 
 		.faq__title {
 			font-size: 20px;
