--- a/src/components/sections/Pricing/pricingStyles.css
+++ b/src/components/sections/Pricing/pricingStyles.css
@@ -4,8 +4,7 @@
 	justify-content: center;
 	align-items: center;
 	width: 100%;
-	padding: 0 100px 0 100px;
-	height: calc(100dvh - 50px);
+	padding: 80px 100px 0 100px;
 
 	.pricing__title {
 		font-size: 32px;
@@ -83,13 +82,13 @@
 
 @media (max-width: 1024px) {
 	.pricing {
-		padding: 0 50px 0 50px;
+		padding: 80px 50px 0 50px;
 	}
 }
 
 @media (max-width: 768px) {
 	.pricing {
-		padding: 0 20px 0 20px;
+		padding: 70px 20px 0 20px;
 
 		.pricing__title {
 			font-size: 24px;
@@ -128,7 +127,7 @@
 
 @media (max-width: 480px) {
 	.pricing {
-		padding: 0 15px 0 15px;
+		padding: 70px 15px 0 15px;
 
 		.pricing__title {
 			font-size: 20px;
